add pos tagged data

--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -11,6 +11,7 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import jieba\n",
+    "import jieba.posseg as pseg\n",
     "jieba.set_dictionary('/Users/henryyang/utils/dict.big.txt')"
    ]
   },
@@ -41,7 +42,8 @@
     "        l = line.split('\\t')\n",
     "        polarity.append(int(l[0]))\n",
     "        review.append(' '.join([tok for tok in jieba.cut(l[1])]))\n",
-    "pd.DataFrame({'Polarity': polarity, 'Review': review}).to_csv('data/polarity_review_seg.csv', index=None)\n",
+    "polarity_review_seg = pd.DataFrame({'Polarity': polarity, 'Review': review})\n",
+    "polarity_review_seg.to_csv('data/polarity_review_seg.csv', index=None)\n",
     "\n",
     "# Seg aspect review\n",
     "aspect_review = []\n",
@@ -54,8 +56,42 @@
     "                'Pos': lines[i+2],\n",
     "                'Neg': lines[i+3]\n",
     "            })\n",
-    "pd.DataFrame(aspect_review).to_csv('data/aspect_review_seg.csv', index=None)"
+    "aspect_review = pd.DataFrame(aspect_review)\n",
+    "aspect_review.to_csv('data/aspect_review_seg.csv', index=None)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Pos & seg\n",
+    "def posseg(s):\n",
+    "    s = s.replace(' ', '')\n",
+    "    tokens = pseg.cut(s)\n",
+    "    return '\\n'.join(['%s %s' % (token.word, token.flag) for token in tokens])\n",
+    "\n",
+    "test_data.Review = test_data.Review.apply(posseg)\n",
+    "test_data.to_csv('data/test_posseg.csv', index=None)\n",
+    "\n",
+    "polarity_review_seg.Review = polarity_review_seg.Review.apply(posseg)\n",
+    "polarity_review_seg.to_csv('data/polarity_review_posseg.csv', index=None)\n",
+    "\n",
+    "aspect_review.Review = aspect_review.Review.apply(posseg)\n",
+    "aspect_review.to_csv('data/aspect_review_posseg.csv', index=None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
