make word embedding by word2vec

--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -4,22 +4,25 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "import jieba\n",
-    "jieba.set_dictionary('/Users/henryyang/utils/dict.big.txt')"
+    "import os\n",
+    "if not os.path.exists('data/dict.big.txt'):\n",
+    "    os.system(\"wget %s -O %s\" % (\n",
+    "        'https://raw.githubusercontent.com/fxsjy/jieba/master/extra_dict/dict.txt.big',\n",
+    "        'data/dict.big.txt'))\n",
+    "jieba.set_dictionary('data/dict.big.txt')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Preprocessing (seg)\n",
@@ -56,6 +59,53 @@
     "            })\n",
     "pd.DataFrame(aspect_review).to_csv('data/aspect_review_seg.csv', index=None)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "aspect_review = pd.read_csv('data/aspect_review_seg.csv')\n",
+    "polarity_review = pd.read_csv('data/polarity_review_seg.csv')\n",
+    "test_review = pd.read_csv('data/test_seg.csv')\n",
+    "test_review = test_review.groupby('Review_id').first()\n",
+    "reviews = aspect_review['Review'].append(polarity_review['Review']).append(test_review['Review'])\n",
+    "print('#reviews:', len(reviews))\n",
+    "\n",
+    "if os.path.exists('data/external_corpus.txt'):\n",
+    "    print('using extrenal corpus, it may take pretty loooong')\n",
+    "    with open('data/external_corpus.txt', \"r\") as inputs:\n",
+    "        with open('data/extrenal_corpus.txt', 'w') as cutted:\n",
+    "            for line in inputs.readlines():\n",
+    "                cutted.write(jieba.cut(line))\n",
+    "else:\n",
+    "    print('external corpus dosen\\'t exitst (put it as data/external_corpus.txt plz QAQ)')\n",
+    "    \n",
+    "\n",
+    "with open(\"data/word2vec_corpus.tmp\", \"w\") as f:\n",
+    "    if os.path.exists('data/external_corpus_seg.txt'):\n",
+    "        with open(\"data/external_corpus_seg.txt\") as ext:\n",
+    "            f.write(ext.read())\n",
+    "        f.write((\"\\n\".join(reviews)+\"\\n\")*5)\n",
+    "    else:\n",
+    "        f.write((\"\\n\".join(reviews)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "if os.path.exists('word2vec/word2vec'):\n",
+    "    printf('running word2vec ...')\n",
+    "    os.system('time word2vec/word2vec -train data/word2vec_corpus.tmp -output vectors.bin -cbow 1 -size 200 -window 8 -negative 25 -hs 0 -sample 1e-4 -threads 20 -binary 1 -iter 15')\n",
+    "else:\n",
+    "    printf('word2vec doesn\\'t exitst (put it as word2vec/word2vec plz QAQ)')"
+   ]
   }
  ],
  "metadata": {
@@ -74,7 +124,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.4.2"
   }
  },
  "nbformat": 4,
