--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -128,10 +128,10 @@
    "outputs": [],
    "source": [
     "if os.path.exists('word2vec/word2vec'):\n",
-    "    printf('running word2vec ...')\n",
+    "    print('running word2vec ...')\n",
     "    os.system('time word2vec/word2vec -train data/word2vec_corpus.tmp -output vectors.bin -cbow 1 -size 200 -window 8 -negative 25 -hs 0 -sample 1e-4 -threads 20 -binary 1 -iter 15')\n",
     "else:\n",
-    "    printf('word2vec doesn\\'t exitst (put it as word2vec/word2vec plz QAQ)')"
+    "    print('word2vec doesn\\'t exitst (put it as word2vec/word2vec plz QAQ)')"
    ]
   }
  ],
